--- a/udemy/Bootstrap4/aulas/flex-justify-content.html
+++ b/udemy/Bootstrap4/aulas/flex-justify-content.html
@@ -5,40 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Bootstrap 4</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/example.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/example.css">
 
 </head>
 
 <body>
 
     <div class="container">
-        
-        <div class="d-flex align-items-stretch bg" style="height: 250px;">
+        <div class="d-flex justify-content-start bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
 
-        <div class="d-flex align-items-start bg" style="height: 250px;">
+        <div class="d-flex justify-content-center bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
 
-        <div class="d-flex align-items-center bg" style="height: 250px;">
+        <div class="d-flex justify-content-between bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
 
-        <div class="d-flex align-items-end bg" style="height: 250px;">
+        <div class="d-flex justify-content-around bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
 
-        <div class="d-flex align-items-baseline bg" style="height: 250px;">
+        <div class="d-flex justify-content-end bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
@@ -46,8 +45,8 @@
 
     </div>
 
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>    
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>    
 </body>
 </html>
