--- a/udemy/Bootstrap4/aulas/flex-wrap-order.html
+++ b/udemy/Bootstrap4/aulas/flex-wrap-order.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Bootstrap 4</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/example.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/example.css">
 
 </head>
 
@@ -14,7 +14,7 @@
 
     <div class="container">
         
-        <div class="d-flex flex-wrap bg" style="overflow: auto;">
+        <div class="d-flex flex-wrap-reverse bg" style="overflow: auto;">
             <div class="bg p-2">Itens</div>
             <div class="bg p-2">Itens</div>
             <div class="bg p-2">Itens</div>
@@ -33,17 +33,13 @@
             <div class="bg p-2">Itens</div>
             <div class="bg p-2">Itens</div>
             <div class="bg p-2">Itens</div>
-            <div class="bg p-2">Itens</div>
-            <div class="bg p-2">Itens</div>
-            <div class="bg p-2">Itens</div>
-            <div class="bg p-2">Itens</div>
-            <div class="bg p-2">Itens</div>
+            <div class="bg p-2 order-first">Last Itens</div>
             
         </div>
 
     </div>
 
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.js"></script>    
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.js"></script>    
 </body>
 </html>
