--- a/udemy/Bootstrap4/whatszap/index.html
+++ b/udemy/Bootstrap4/whatszap/index.html
@@ -11,7 +11,40 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 px-0" id="panel-left">
+                <header class="d-flex">
+                    <img src="../assets/img/contact.svg" alt="Avatar">
+                </header>
+
+                <div id="search">
+
+                </div>
+
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <img src="../assets/img/hcode-photo.svg" alt="Avatar">
+                        <div class="d-flex flex-column flex-fill">
+                            <h6>Djalminha</h6>
+                            <small>Lets'go study today</small>
+                        </div>
+                        <div class="d-flex flex-column align-items-center">
+                            <span class="timeago">16:44</span>
+                            <span class="badge badge-success badge-pill">1</span>
+                        </div>
+                    </a>
+
+                    <a href="#" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <img src="../assets/img/contact.svg" alt="Avatar">
+                        <div class="d-flex flex-column flex-fill">
+                            <h6>Aluno</h6>
+                            <small>Tomorrow is Thesneday?</small>
+                        </div>
+                        <div class="d-flex flex-column align-items-center">
+                            <span class="timeago">Ontem</span>
+                            <span class="badge badge-success badge-pill"></span>
+                        </div>
+                    </a>
+                </div>
 
             </div>
             <div class="col-md-8 px-0 d-flex flex-column">
