--- a/udemy/Bootstrap4/aulas/form-grid.html
+++ b/udemy/Bootstrap4/aulas/form-grid.html
@@ -15,9 +15,11 @@
             <div class="row">
                 <div class="col">
                     <input type="text" placeholder="Primeiro nome" class="form-control">
+                    <small class="text-muted">Digite sem abreviações</small>
                 </div>
                 <div class="col">
                     <input type="text" placeholder="Ultimo nome" class="form-control">
+                    <small class="text-muted">Digite sem abreviações</small>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
